resume-[en|zh]: correct filename metadata in head

--- a/resume-zh.tex
+++ b/resume-zh.tex
@@ -1,6 +1,6 @@
 % !Mode:: "TeX:UTF-8"
 % +-----------------------------------------------------------------------------
-% | File: example-zh
+% | File: resume-zh
 % | Author: huxuan
 % | E-mail: i(at)huxuan.org
 % | Created: 2012-12-18
