--- a/resume-en.tex
+++ b/resume-en.tex
@@ -1,6 +1,6 @@
 % !Mode:: "TeX:UTF-8"
 % +-----------------------------------------------------------------------------
-% | File: example-en
+% | File: resume-en
 % | Author: huxuan
 % | E-mail: i(at)huxuan.org
 % | Created: 2012-12-18
