Modify according to cls change.

--- a/resume-en.tex
+++ b/resume-en.tex
@@ -13,13 +13,16 @@
 
 \documentclass[en,color]{resumecls}
 
+\CTEXoptions[today=old]
+
 \name{Name}
 \organization{unit, school or organization}
 \address{address, zip code}
 \mobile{+1 XXX XXXX XXXX}
 \mail{i@example.com}
 \homepage{http://example.com}
-\resumeurl{http://example.com/resume-en.pdf}
+\leftfooter{Last Modified: \today}
+\rightfooter{\url{http://example.com/resume-en.pdf}}
 
 \begin{document}
 
