--- a/resume-zh.tex
+++ b/resume-zh.tex
@@ -13,13 +13,16 @@
 
 \documentclass[zh,color]{resumecls}
 
+\CTEXoptions[today=small]
+
 \name{姓名}
 \organization{单位、学校或组织}
 \address{地址，邮编}
 \mobile{+86 XXX XXXX XXXX}
 \mail{i@example.com}
 \homepage{http://example.com}
-\resumeurl{http://example.com/resume-zh.pdf}
+\leftfooter{最后更新: \today}
+\rightfooter{\url{http://example.com/resume-zh.pdf}}
 
 \begin{document}
 
