Modify according vim syntastic plugin.

--- a/resume-en.tex
+++ b/resume-en.tex
@@ -32,52 +32,52 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Education}
-\entry{2em}{Xrp{8em}}{
+\entry{2em}{Xrp{8em}}{%
     \heiti{School} & City & Time Period \\
 }
-\entry{4em}{lXX}{
+\entry{4em}{lXX}{%
     Degree & College of XXX & Major in XX \\
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Research Experience}
-\entry{2em}{Xp{8em}}{
+\entry{2em}{Xp{8em}}{%
     \heiti{Insitute} & Time Period \\
 }
 \entry{4em}{X}{Lab \quad Position}
-\entry{6em}{X}{
+\entry{6em}{X}{%
     Research Fields and Specific Content \\
     Publication (You can also use bibtex, like \cite{label}, see end of doc） \\
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Working Experience}
-\entry{2em}{Xp{8em}}{
+\entry{2em}{Xp{8em}}{%
     \heiti{Unit} & Time Period \\
 }
 \entry{4em}{X}{Department \quad Position}
-\entry{6em}{X}{
+\entry{6em}{X}{%
     Specific Issues Responsible for \\
     Specific Content of Your Work \\
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{School Experience}
-\entry{2em}{Xp{8em}}{
+\entry{2em}{Xp{8em}}{%
     Experience 1 & Time Period \\
     Experience 2 & Time Period \\
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Awards}
-\entry{2em}{Xr}{
+\entry{2em}{Xr}{%
     Award 1 & Time \\
     Award 2 & Time \\
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Professional Skill}
-\entry{2em}{lX}{
+\entry{2em}{lX}{%
     Proficient in  & XXX \\
     Experienced in & XXX \\
     Familiar with  & XXX \\
@@ -86,7 +86,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Other listings, such as hobby, network profile and so on}
-\entry{2em}{lX}{
+\entry{2em}{lX}{%
     Label 1 & Content 1 \\
     Label 2 & Content 2 \\
 }
