--- a/resume-zh.tex
+++ b/resume-zh.tex
@@ -32,52 +32,52 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{教育经历}
-\entry{2em}{Xrp{8em}}{
+\entry{2em}{Xrp{8em}}{%
     \heiti{学校} & 城市 & 起止时间 \\
 }
-\entry{4em}{lXX}{
+\entry{4em}{lXX}{%
     学位 & XX学院 & XX专业 \\
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{科研经历}
-\entry{2em}{Xp{8em}}{
+\entry{2em}{Xp{8em}}{%
     \heiti{地点} & 起止时间 \\
 }
 \entry{4em}{X}{实验室名称 \quad 职位}
-\entry{6em}{X}{
+\entry{6em}{X}{%
     研究方向和具体内容 \\
     发表成果（亦可使用bibtex，像这样\cite{label}，见文档最后注释内容） \\
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{工作经历}
-\entry{2em}{Xp{8em}}{
+\entry{2em}{Xp{8em}}{%
     \heiti{单位名称} & 起止时间 \\
 }
 \entry{4em}{X}{部门 \quad 职位}
-\entry{6em}{X}{
+\entry{6em}{X}{%
     负责的具体事项 \\
     工作的具体内容 \\
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{校园经历}
-\entry{2em}{Xp{8em}}{
+\entry{2em}{Xp{8em}}{%
     经历1 & 起止时间 \\
     经历2 & 起止时间 \\
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{获得荣誉}
-\entry{2em}{Xr}{
+\entry{2em}{Xr}{%
     荣誉1 & 颁发时间 \\
     荣誉2 & 颁发时间 \\
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{专业技能}
-\entry{2em}{lX}{
+\entry{2em}{lX}{%
     精通 & XXX \\
     熟悉 & XXX \\
     掌握 & XXX \\
@@ -86,7 +86,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{其他列举事项-如个人爱好，网络资料等}
-\entry{2em}{lX}{
+\entry{2em}{lX}{%
     标签1 & 标签对应内容 \\
     标签2 & 标签对应内容 \\
 }
