Update deprecated command for ctex.

--- a/resume-en.tex
+++ b/resume-en.tex
@@ -13,7 +13,7 @@
 
 \documentclass[en,color]{resumecls}
 
-\CTEXoptions[today=old]
+\ctexset{today=old}
 
 \name{Name}
 \organization{unit, school or organization}
