Remove unused options in resume-en/zh.tex.

--- a/resume-en.tex
+++ b/resume-en.tex
@@ -11,7 +11,7 @@
 % | Copyrgiht (c) 2012-2013 by huxuan. All rights reserved.
 % +-----------------------------------------------------------------------------
 
-\documentclass[en,color]{resumecls}
+\documentclass[color]{resumecls}
 
 \ctexset{today=old}
 
