--- a/resume-zh.tex
+++ b/resume-zh.tex
@@ -11,7 +11,7 @@
 % | Copyrgiht (c) 2012-2013 by huxuan. All rights reserved.
 % +-----------------------------------------------------------------------------
 
-\documentclass[zh,color]{resumecls}
+\documentclass[color]{resumecls}
 
 \ctexset{today=small}
 
