--- a/resume-en.tex
+++ b/resume-en.tex
@@ -4,99 +4,88 @@
 % | Author: huxuan
 % | E-mail: i(at)huxuan.org
 % | Created: 2012-12-18
-% | Last modified: 2013-03-16
+% | Last modified: 2020-04-16
 % | Description:
 % |     A English Resume Example in LaTeX based on resumecls
 % |
-% | Copyrgiht (c) 2012-2013 by huxuan. All rights reserved.
+% | Copyright (c) 2012-2020 by huxuan. All rights reserved.
 % +-----------------------------------------------------------------------------
 
 \documentclass[color]{resumecls}
 
-\ctexset{today=old}
+\include{resume-common}
 
 \name{Name}
-\organization{unit, school or organization}
-\address{address, zip code}
-\mobile{+1 XXX XXXX XXXX}
-\mail{i@example.com}
-\homepage{http://example.com}
+\organization{School or Organization}
+\address{Address, Zip Code}
 \leftfooter{Last Modified: \today}
 \rightfooter{\url{http://example.com/resume-en.pdf}}
 
+\ctexset{today=old}
+
 \begin{document}
-
 \begin{table}
-
 \maketitle
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\heading{Experience (Compacted version)}
+\entry{0em}{Xlr}{{\bfseries Organization} \quad Department & Position & Time Period}
+\entry{2em}{X}{%
+    Description1 \\
+    Description2 \\
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Education}
-\entry{2em}{Xrp{8em}}{%
-    \heiti{School} & City & Time Period \\
+\entry{0em}{Xrr}{{\bfseries School} & City & Time Period}
+\entry{2em}{lXX}{%
+    Degree1 & College1 & Major1 \\
+    Degree2 & College2 & Major2 \\
 }
-\entry{4em}{lXX}{%
-    Degree & College of XXX & Major in XX \\
-}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Research Experience}
-\entry{2em}{Xp{8em}}{%
-    \heiti{Insitute} & Time Period \\
+\entry{0em}{Xr}{{\bfseries Insitute} & Time Period}
+\entry{2em}{X}{Lab \quad Position}
+\entry{4em}{X}{%
+    Description \\
+    bibtex can be used here, like \cite{label} \\
 }
-\entry{4em}{X}{Lab \quad Position}
-\entry{6em}{X}{%
-    Research Fields and Specific Content \\
-    Publication (You can also use bibtex, like \cite{label}, see end of doc） \\
-}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Working Experience}
-\entry{2em}{Xp{8em}}{%
-    \heiti{Unit} & Time Period \\
+\entry{0em}{Xr}{{\bfseries Organization} & Time Period}
+\entry{2em}{X}{Department \quad Position}
+\entry{4em}{X}{%
+    Description \\
 }
-\entry{4em}{X}{Department \quad Position}
-\entry{6em}{X}{%
-    Specific Issues Responsible for \\
-    Specific Content of Your Work \\
-}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{School Experience}
-\entry{2em}{Xp{8em}}{%
-    Experience 1 & Time Period \\
-    Experience 2 & Time Period \\
+\entry{0em}{Xr}{%
+    Experience1 & Time Period \\
+    Experience2 & Time Period \\
 }
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Awards}
-\entry{2em}{Xr}{%
-    Award 1 & Time \\
-    Award 2 & Time \\
+\entry{0em}{Xr}{%
+    Award1 & Time \\
+    Award2 & Time \\
 }
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Professional Skill}
-\entry{2em}{lX}{%
+\entry{0em}{lX}{%
     Proficient in  & XXX \\
     Experienced in & XXX \\
     Familiar with  & XXX \\
     Use            & XXX \\
 }
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \heading{Other listings, such as hobby, network profile and so on}
-\entry{2em}{lX}{%
-    Label 1 & Content 1 \\
-    Label 2 & Content 2 \\
+\entry{0em}{lX}{%
+    Label1 & Content1 \\
+    Label2 & Content2 \\
 }
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % If there is no publications, just comment this part.
 \heading{Appendix: Publications}
 \vspace{-6em}
 \bibliography{resume}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{table}
 \end{document}
