Update example with version 0.4.1.
Squashed commit of the following:

commit eef52d6c905f3df993f948e7badbb793b886c8d6
Author: huxuan <i@huxuan.org>
Date:   Mon Apr 20 21:59:27 2020 +0800

    Update README.

commit 9082e9af15a1700e8f8ee3aa3487c263d33e73b8
Author: huxuan <i@huxuan.org>
Date:   Mon Apr 20 21:50:46 2020 +0800

    Update README with new overleaf template url.

commit 8aa1a585d16fcf20df8d6b22b5eda071bd134aa9
Author: huxuan <i@huxuan.org>
Date:   Mon Apr 20 21:42:28 2020 +0800

    Sample for Multiple Pages.

commit 08150a7958926c55b57de6a5e60a2e78091cf670
Author: huxuan <i@huxuan.org>
Date:   Mon Apr 20 21:41:10 2020 +0800

    Typo fix in resume-en.tex.

commit 08f8777e6ce013ee0cd39fcacd1c2d36bf1deac4
Author: huxuan <i@huxuan.org>
Date:   Mon Apr 20 21:40:58 2020 +0800

    Update Makefile.

--- a/resume-en.tex
+++ b/resume-en.tex
@@ -27,7 +27,7 @@
 \begin{table}
 \maketitle
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\heading{Experience (Compacted version)}
+\heading{Experience (Compact Version)}
 \entry{0em}{Xlr}{{\bfseries Organization} \quad Department & Position & Time Period}
 \entry{2em}{X}{%
     Description1 \\
@@ -83,9 +83,19 @@
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % If there is no publications, just comment this part.
-\heading{Appendix: Publications}
+\heading{Publications}
 \vspace{-6em}
 \bibliography{resume}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Sample for two or more pages.
+\end{table}
+\clearpage
+\begin{table}
+\heading{Heading for Page 2}
+\entry{0em}{X}{
+    Each page is enclosed inside a table environment. \\
+    \verb|\clearpage| between the tables will lead to a new page. \\
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{table}
 \end{document}
