--- a/resume-zh.tex
+++ b/resume-zh.tex
@@ -82,10 +82,20 @@
     标签2 & 标签对应内容 \\
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% 如果不需要发表成果，注释这一段即可
-\heading{附：发表成果}
+% 如果不需要发表成果，注释这一段即可。
+\heading{发表成果}
 \vspace{-6em}
 \bibliography{resume}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 两页或者多页的示例。
+\end{table}
+\clearpage
+\begin{table}
+\heading{第二页小标题}
+\entry{0em}{X}{
+    每个页面都包含在一个 table 环境中。 \\
+    表格之间的 \verb|\clearpage| 会新建一个页面。 \\
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{table}
 \end{document}
